--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,10 @@
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("Trailer Maker") {
+<h1>The easiest way to create trailers</h1>
+<h2>Just upload your video and adjust your settings</h2>
+<form>
+  <input type="file" name="video"/>
+  <input type="submit" value="Go!"/>
+</form>
 }
