--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,17 +9,72 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        @* Here's where we render the page title `String`. *@
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
+        <script src="@routes.Assets.versioned("bootstrap/js/jquery-3.2.1.slim.min.js")"></script>
+        <script src="@routes.Assets.versioned("bootstrap/js/popper.min.js")"></script>
+
+        <link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
+        <script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
+
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/narrow-jumbotron.css")">
     </head>
     <body>
+    <div class="container">
+        <div class="header clearfix">
+            <nav>
+                <ul class="nav nav-pills float-right">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">We're open source</a>
+                    </li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">Trailer maker</h3>
+        </div>
+
+        <div class="jumbotron">
+            @content
+        </div>
+        @*
+        <div class="row marketing">
+            <div class="col-lg-6">
+                <h4>Subheading</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+                <h4>Subheading</h4>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+                <h4>Subheading</h4>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+
+            <div class="col-lg-6">
+                <h4>Subheading</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+                <h4>Subheading</h4>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+                <h4>Subheading</h4>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            </div>
+        </div>
+        *@
+        <footer class="footer">
+            <p>&copy; Trailermaker.io 2017</p>
+        </footer>
+
+    </div>
         @* And here's where we render the `Html` object containing
          * the page content. *@
-        @content
-
       <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
