--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,13 +13,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
-        <script src="@routes.Assets.versioned("bootstrap/js/jquery-3.2.1.slim.min.js")"></script>
+        <script src="@routes.Assets.versioned("bootstrap/js/jquery-3.2.1.min.js")"></script>
         <script src="@routes.Assets.versioned("bootstrap/js/popper.min.js")"></script>
 
         <link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
         <script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/narrow-jumbotron.css")">
+        <script src="@routes.Assets.versioned("javascripts/main.js")"></script>
     </head>
     <body>
     <div class="container">
@@ -73,8 +74,5 @@
         </footer>
 
     </div>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
-      <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
