--- a/app/views/progress.scala.html
+++ b/app/views/progress.scala.html
@@ -1,6 +1,6 @@
 @(id: String)
 
 @main("Trailer Maker") {
-<h1>Your trailer is being created.</h1>
-<h3><a href="/trailers/get/@id">Download your trailer</a></h3>
+<h1>Your trailer is ready.</h1>
+<h3><a href="/trailers/get/@id">Download</a></h3>
 }
