--- a/app/views/trailer.scala.html
+++ b/app/views/trailer.scala.html
@@ -1,2 +1,8 @@
-@(trailerForm: Form[TrailerData])(implicit messages: Messages)
+@(elements: helper.FieldElements)
 
+<div class="@if(elements.hasErrors) {error}">
+    <label for="@elements.id">@elements.label</label>
+    @elements.input
+    <span class="errors">@elements.errors.mkString(", ")</span>
+    <span class="help">@elements.infos.mkString(", ")</span>
+</div>
