Showing constraints in form input and checking whether valid video file or not

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,6 +20,7 @@
         <script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/narrow-jumbotron.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <script src="@routes.Assets.versioned("javascripts/main.js")"></script>
     </head>
     <body>
@@ -28,17 +29,11 @@
             <nav>
                 <ul class="nav nav-pills float-right">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">We're open source</a>
+                        <a class="nav-link active" href="https://github.com/alexandrelanglais/trailer-maker-web">We're open source</a>
                     </li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Trailer maker</h3>
+            <h3 class="text-muted"><a class="text-muted" href="/">Trailer maker</a></h3>
         </div>
 
         <div class="jumbotron">
