--- a/public/stylesheets/narrow-jumbotron.css
+++ b/public/stylesheets/narrow-jumbotron.css
@@ -43,12 +43,16 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
   border-bottom: .05rem solid #e5e5e5;
 }
 .jumbotron .btn {
   padding: .75rem 1.5rem;
   font-size: 1.5rem;
+}
+.jumbotron form {
+  margin-top: 1.5rem;
+  background-color: white;
+  padding: .5rem
 }
 
 /* Supporting marketing content */
