--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(trailerForm: Form[TrailerData])(implicit messages: Messages, flash: Flash)
+@(trailerForm: Form[TrailerData], conf: play.api.Configuration)(implicit messages: Messages, flash: Flash)
 
 @implicitField = @{ helper.FieldConstructor(trailer.f) }
 
@@ -7,21 +7,30 @@
 <h3>Just upload your video and adjust your settings</h3>
 
 @flash.get("error").map(err => {
-<h2>@err</h2>
+<div class="error"><strong>{err}</strong></div>
 })
 
 @helper.form(action = routes.TrailersController.makeTrailer(), 'enctype -> "multipart/form-data") {
+<div class="form-group">
+  <label for="video">Video file</label>
+  <input type="file" name="video" id="video" class="form-control" aria-describedby="fileHelp" placeholder="Choose file">
+  <small id="fileHelp" class="form-text text-muted">Max @conf.get[String]("parsers.anyContent.maxLength").</small>
+</div>
+<div class="row">
+  @helper.input(trailerForm("duration"), '_showConstraints -> false) { (id, name, value, args) =>
+  <input type="text" name="@name" id="@id" class="form-control" value="@value" aria-describedby="durationHelp" @toHtmlArgs(args)>
+  <small id="durationHelp" class="form-text text-muted">Between @conf.get[String]("trailer.duration.min") and @conf.get[String]("trailer.duration.max") ms </small>
+  }
 
+  @helper.input(trailerForm("length"), '_showConstraints -> false) { (id, name, value, args) =>
+  <input type="text" name="@name" id="@id" class="form-control" value="@value" aria-describedby="lengthHelp" @toHtmlArgs(args)>
+  <small id="lengthHelp" class="form-text text-muted">Between @conf.get[String]("trailer.cutlength.min") and @conf.get[String]("trailer.cutlength.max") ms </small>
+  }
+</div>
 
-<p>
-<input type="file" name="video">
-
-  @helper.inputText(trailerForm("duration"), '_showConstraints -> false)
-  @helper.inputText(trailerForm("length"), '_showConstraints -> false)
-
-  <p>
-    <input type="submit">
-  </p>
+<div class="form-actions">
+  <button type="submit" class="btn btn-primary">Make trailer</button>
+</div>
 }
 
 <div id="progress"></div>
