--- a/app/views/trailer.scala.html
+++ b/app/views/trailer.scala.html
@@ -1,8 +1,8 @@
 @(elements: helper.FieldElements)
 
-<div class="@if(elements.hasErrors) {error}">
+<div class="col">
     <label for="@elements.id">@elements.label</label>
     @elements.input
-    <span class="errors">@elements.errors.mkString(", ")</span>
+    <span class="error">@elements.errors.mkString(", ")</span>
     <span class="help">@elements.infos.mkString(", ")</span>
 </div>
