--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -39,31 +39,15 @@
         <div class="jumbotron">
             @content
         </div>
-        @*
         <div class="row marketing">
-            <div class="col-lg-6">
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+            <div class="col">
+                <h4>Duration</h4>
+                <p>Specify the length in milliseconds of the resulting trailer you want to create.</p>
 
-                <h4>Subheading</h4>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h4>Subheading</h4>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-            </div>
-
-            <div class="col-lg-6">
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h4>Subheading</h4>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-                <h4>Subheading</h4>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                <h4>Cut length</h4>
+                <p>Defines in milliseconds the length of each part used to make the trailer.</p>
             </div>
         </div>
-        *@
         <footer class="footer">
             <p>&copy; Trailermaker.io 2017</p>
         </footer>
