--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,11 +11,21 @@
 })
 
 @helper.form(action = routes.TrailersController.makeTrailer(), 'enctype -> "multipart/form-data") {
-<div class="form-group">
-  <label for="video">Video file</label>
-  <input type="file" name="video" id="video" class="form-control" aria-describedby="fileHelp" placeholder="Choose file">
-  <small id="fileHelp" class="form-text text-muted">Max @conf.get[String]("parsers.anyContent.maxLength").</small>
+<!-- The fileinput-button span is used to style the file input field as button -->
+  <span class="btn btn-success fileinput-button">
+        <i class="glyphicon glyphicon-plus"></i>
+        <span>Select file (max @conf.get[String]("parsers.anyContent.maxLength"))</span>
+  <!-- The file input field used as target for the file upload widget -->
+        <input id="fileupload" type="file" name="video"/>
+    </span>
+<br>
+<!-- The global progress bar -->
+<div id="progress" class="progress">
+  <div class="progress-bar progress-bar-success"></div>
 </div>
+<!-- The container for the uploaded files -->
+<div id="files" class="files"></div>
+
 <div class="row">
   @helper.input(trailerForm("duration"), '_showConstraints -> false) { (id, name, value, args) =>
   <input type="text" name="@name" id="@id" class="form-control" value="@value" aria-describedby="durationHelp" @toHtmlArgs(args)>
@@ -32,6 +42,4 @@
   <button type="submit" class="btn btn-primary">Make trailer</button>
 </div>
 }
-
-<div id="progress"></div>
 }
