--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,3 +21,14 @@ a.text-muted:hover {
     background-color: transparent;
     text-align: center;
 }
+
+.fileupload-progress {
+	margin: 10px 0;
+}
+.fileupload-progress .progress-extended {
+	margin-top: 5px;
+}
+
+#progress {
+	margin: 1rem;
+}
