--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,10 @@
     color:red;
     text-align:center;
 }
+.success {
+    color:green;
+    text-align:center;
+}
 
 header h3 {
     text-align:left;
