--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,13 +12,14 @@
 
 @helper.form(action = routes.TrailersController.makeTrailer(), 'id -> "makeTrailer") {
 <!-- The fileinput-button span is used to style the file input field as button -->
+<div class="fileuploadbtn">
   <span class="btn btn-success fileinput-button">
-        <i class="glyphicon glyphicon-plus"></i>
+        <i class="fa fa-plus"></i>
         <span>Select file (max @conf.get[String]("parsers.anyContent.maxLength"))</span>
   <!-- The file input field used as target for the file upload widget -->
         <input id="fileupload" type="file" name="video"/>
     </span>
-<br>
+</div>
 <!-- The global progress bar -->
 <div id="progress" class="progress">
   <div class="progress-bar progress-bar-success"></div>
