heroic features template

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -45,7 +45,17 @@
             <nav>
                 <ul class="nav nav-pills float-right">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.reddit.com/r/trailermaker">Trouble?</a>
+                        <a class="nav-link" href="https://www.reddit.com/r/trailermaker"><span class="fa fa-reddit"></span> Trouble?</a>
+                    </li>
+                </ul>
+                <ul class="nav nav-pills float-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.reddit.com/r/trailermaker"><span class="fa fa-paypal"></span> Donate!</a>
+                    </li>
+                </ul>
+                <ul class="nav nav-pills float-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.reddit.com/r/trailermaker"><span class="fa fa-github"></span> We're OpenSource</a>
                     </li>
                 </ul>
             </nav>
