--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,9 +16,9 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
         <script src="@routes.Assets.versioned("deps/node_modules/jquery/dist/jquery.min.js")"></script>
-        <script src="@routes.Assets.versioned("deps/node_modules/tether/dist/js/tether.min.js")"></script>
+        <script src="@routes.Assets.versioned("deps/node_modules/popper.js/dist/umd/popper.min.js")"></script>
 
-        <link rel="stylesheet" href="@routes.Assets.versioned("deps/node_modules/tether/dist/css/tether.min.css")">
+        <!--link rel="stylesheet" href="@routes.Assets.versioned("deps/node_modules/tether/dist/css/tether.min.css")"-->
         <link rel="stylesheet" href="@routes.Assets.versioned("deps/node_modules/bootstrap/dist/css/bootstrap.min.css")">
         <script src="@routes.Assets.versioned("deps/node_modules/bootstrap/dist/js/bootstrap.min.js")"></script>
 
@@ -46,6 +46,11 @@
                 <ul class="nav nav-pills float-right">
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.reddit.com/r/trailermaker"><span class="fa fa-reddit"></span> Trouble?</a>
+                    </li>
+                </ul>
+                <ul class="nav nav-pills float-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/app"><span class="fa fa-download"></span> Download</a>
                     </li>
                 </ul>
                 @*
