--- a/app/views/progress.scala.html
+++ b/app/views/progress.scala.html
@@ -1,7 +1,9 @@
 @(id: String, conf: play.api.Configuration)
 
 @main("Trailer Maker") {
+<header class="jumbotron hero-spacer">
 <h1>Your trailer is ready.</h1>
 <h3><a href="/trailers/get/@id">Download</a></h3>
 <div id="trailerAvailableFor" class="text-muted text-center">Your download will be available for @conf.get[String]("trailer.available.for") minutes</div>
+</header>
 }
