--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 @implicitField = @{ helper.FieldConstructor(trailer.f) }
 
-@main("Trailer Maker") {
+@main("Trailer Maker - Automatic trailer generation software online") {
 <header class="jumbotron hero-spacer">
 <h1>Easy way to create trailers.</h1>
 <h3>Just upload your video and adjust your settings</h3>
