--- a/app/views/progress.scala.html
+++ b/app/views/progress.scala.html
@@ -1,6 +1,6 @@
 @(id: String, conf: play.api.Configuration)
 
-@main("Trailer Maker") {
+@main("Trailer Maker - Trailer ready") {
 <header class="jumbotron hero-spacer">
 <h1>Your trailer is ready.</h1>
 <h3><a href="/trailers/get/@id">Download</a></h3>
