--- a/app/views/unexistant.scala.html
+++ b/app/views/unexistant.scala.html
@@ -1,6 +1,6 @@
 @(id: String)
 
-@main("Trailer Maker") {
+@main("Trailer Maker - Problem") {
 <header class="jumbotron hero-spacer">
 <h1>Trailer not found.</h1>
 <div class="text-center error">The requested trailer does not exists</div>
