--- a/app/views/getapp.scala.html
+++ b/app/views/getapp.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("Trailer Maker") {
+@main("Trailer Maker - Download the application") {
 <header class="jumbotron hero-spacer">
 <h1>Download the standalone app.</h1>
 <h3>Choose your platform</h3>
@@ -23,6 +23,17 @@
             <div class="card-body">
                 <h4 class="card-title">Fedora/Centos/Redhat</h4>
                 <p class="card-text"><a href="/binaries/trailer-maker_0.1_all.rpm">trailer-maker_0.1_all.rpm</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6 col-md-6 mb-4">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Windows/Universal/Zip</h4>
+                <p class="card-text">
+                    You will need to install ffmpeg to have this version to work<br/>
+                    <a href="/binaries/trailer-maker-0.1.zip">trailer-maker-0.1.zip</a>
+                </p>
             </div>
         </div>
     </div>
