--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,6 +22,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Online automatic trailer generation software.
+            Choose your settings and create a trailer from a video file.
+            You can also download the application for free.">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
         <script src="@routes.Assets.versioned("deps/node_modules/jquery/dist/jquery.min.js")"></script>
