Changed to trailer-maker core v0.2

--- a/app/views/getapp.scala.html
+++ b/app/views/getapp.scala.html
@@ -14,7 +14,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Ubuntu/Debian</h4>
-                <p class="card-text"><a href="/binaries/trailer-maker_0.1_all.deb">trailer-maker_0.1_all.deb</a></p>
+                <p class="card-text"><a href="/binaries/trailer-maker-0.2.deb">trailer-maker-0.2.deb</a></p>
             </div>
         </div>
     </div>
@@ -22,7 +22,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Fedora/Centos/Redhat</h4>
-                <p class="card-text"><a href="/binaries/trailer-maker_0.1_all.rpm">trailer-maker_0.1_all.rpm</a></p>
+                <p class="card-text"><a href="/binaries/trailer-maker-0.2.rpm">trailer-maker-0.2.rpm</a></p>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
                 <h4 class="card-title">Windows/Universal/Zip</h4>
                 <p class="card-text">
                     You will need to install ffmpeg to have this version to work<br/>
-                    <a href="/binaries/trailer-maker-0.1.zip">trailer-maker-0.1.zip</a>
+                    <a href="/binaries/trailer-maker-0.2.zip">trailer-maker-0.2.zip</a>
                 </p>
             </div>
         </div>
